# OpenDrop_OP

./: .gitignore  .pre-commit-config.yaml  DEV_GUIDE.md  Developer Guide.md  FrontEnd.md  MANIFEST.in  METADATA  MacOS Documentation.md  MacOS_README.md  README.md  RELEASE.md  SConstruct  TESTING.md  conan.py  install.py  main.py  opendrop_pr_test.py  output.txt  pyproject.toml  requirements-38.txt  requirements-3810-macos.txt  requirements-3810.txt  requirements-stable.txt  requirements.txt  setup.py  temp.ui  test_all.py  user_config.yaml  windows-installer.wxs
modules/: BA_fit.py  ca_data_processor.py  classes.py  ellipse_fit.py  extract_profile.py  pd_data_processor.py  polynomial_fit.py  preprocessing.py  select_regions.py
modules/CA/: ca_data_processor.py
modules/IFT/: analysis.py  ift_data_processor.py  pd_data_processor.py  pendant.py  younglaplace.py
modules/IFT/fit/: __init__.py
modules/ML_model/: create_contours_args5.py  fingerprint.pb  keras_metadata.pb  modelsummary.txt  parse_output.py  prepare_experimental.py  saved_model.pb  trainHistoryDict.pkl  train_continue.py  training_history.json
modules/ML_model/variables/: variables.index
modules/contact_angle/: ca_data_processor.py  extract_profile.py  extract_profile_test.py
modules/core/: classes.py  classes_test.py  initialise_parameters.py  initialise_parameters_test.py
modules/fitting/: BA_fit.py  BA_fit_test.py  circular_fit.py  circular_fit_test.py  de_YoungLaplace_test.py  ellipse_fit.py  ellipse_fit_scikit.py  fits.py  fits_test.py  needle_fit.py  polynomial_fit.py  polynomial_fit_test.py
modules/ift/: circle.py  ift_data_processor.py  needle.py  pd_data_processor.py  pendant.py
modules/ift/younglaplace/: shape.pyi  younglaplace.py
modules/image/: read_image.py  read_image_test.py  select_regions.py  select_regions_test.py
modules/preprocessing/: ExtractData.py  ExtractData_test.py  __init__.py  preprocessing.py
opendrop-ml/: main.py
opendrop-ml/modules/ML_model/: parse_output.py  prepare_experimental.py  train_continue.py
opendrop-ml/modules/contact_angle/: ca_data_processor.py  extract_profile.py  extract_profile_test.py
opendrop-ml/modules/core/: classes.py  classes_test.py  initialise_parameters.py  initialise_parameters_test.py
opendrop-ml/modules/fitting/: BA_fit.py  BA_fit_test.py  circular_fit.py  circular_fit_test.py  de_YoungLaplace_test.py  ellipse_fit.py  ellipse_fit_scikit.py  fits.py  fits_test.py  polynomial_fit.py  polynomial_fit_test.py
opendrop-ml/modules/ift/: circle.py  (+3 more)
opendrop-ml/utils/: config.py  os.py
opendrop-ml/views/: acquisition.py  acquisition_test.py  ca_analysis.py  ca_analysis_test.py  ca_preparation.py  ca_preparation_test.py  function_window.py  ift_analysis.py  ift_analysis_test.py  ift_preparation.py  main_window.py  navigation.py  navigation_test.py  output_page.py  output_page_test.py
opendrop/app/: app.py  main_menu.py  main_menu.ui  main_menu.ui~
opendrop/appfw/: _component.py
opendrop/fit/: conan.py  test_fits.py
opendrop/widgets/: file_chooser_button.py  info_dialog.py
opendrop2/: main.py
opendrop2/utils/: config.py  geometry.py  image_handler.py  os.py  validators.py
opendrop2/views/: acquisition.py  acquisition_test.py  ca_analysis.py  ca_analysis_test.py  ca_preparation.py  ca_preparation_test.py  function_window.py  ift_analysis.py  ift_analysis_test.py  ift_preparation.py  main_window.py  navigation.py  navigation_test.py  output_page.py  output_page_test.py
opendrop_ml/: main.py
opendrop_ml/utils/: config.py  enums.py  misc.py
opendrop_ml/views/: acquisition_test.py  ca_preparation.py  function_window.py  ift_analysis.py  ift_preparation.py  main_window.py  navigation.py  navigation_test.py  output_page.py  output_page_test.py
test_images/: expected_output.csv
tests/: .coverage  test_ca_analysis.py  test_circluar_fit.py  test_conan.py  test_extract_data.py  test_extract_profile.py  test_ift_acquisition.py  test_navigation.py  test_output_page.py  test_read_image.py
training files/: combine.py  create_contours_args4.py  train_model.py
training_files/: README.md  combine.py  create_contours_args4.py  train_model.py  zeropad.py
utils/: config.py  enums.py  geometry.py  image_handler.py  keymap.py  misc.py  os.py  tooltip_util.py  validators.py
utils/bindable/: abc.py  tsbindablecollection.py  typing.py
views/: acquisition.py  acquisition_test.py  ca_acquisition.py  ca_acquisition_test.py  ca_analysis.py  ca_analysis_merge.py  ca_analysis_test.py  ca_analysis_with_linechart.py  ca_preparation.py  ca_preparation_test.py  function_window.py  ift_acquisition.py  ift_acquisition_test.py  ift_analysis.py  ift_analysis_test.py  ift_preparation.py  main_window.py  navigation.py  navigation_test.py  output_page.py  output_page_test.py  parameters.csv  test_navigation.py  test_output_page.py
views/component/: check_button.py  ctk_input_popup.py  ctk_table_popup.py  float_combobox.py  float_entry.py  imageGallery.py  imageProcessing.py  integer_entry.py  option_menu.py  preparation.py
views/helper/: style.py  theme.py  validation.py
(+243 files in other folders)
