[build-system]
requires = [
    "setuptools>=42",  # Build backend for packaging
    "wheel",           # For building wheels
    "Cython"           # For compiling Cython extensions
]
build-backend = "setuptools.build_meta"

[project]
name = "opendrop_ml"
version = "4.0.0"
description = "opendrop_ml is an open-source, cross-platform tool for analyzing liquid droplets in surface science using contact angle and pendant drop methods, integrating classical geometric fitting with machine learning for flexible, automated, high-throughput image processing."
authors = [
    { name = "Sameer Sikka", email = "ssikka@student.unimelb.edu.au" },
    { name = "Ahmed AlMutairi", email = "ahmed.almutairi@student.unimelb.edu.au" },
    { name = "Yukun Cao", email = "yukun.cao1@student.unimelb.edu.au" },
    { name = "Tori Li", email = "hanying.li@student.unimelb.edu.au" },
    { name = "Qingying Lyu", email = "qllyu@student.unimelb.edu.au" },
    { name = "Junzhou Mao", email = "junzhou.mao@student.unimelb.edu.au" },
    { name = "Yifan Shi", email = "yifan.shi5@student.unimelb.edu.au" },
    { name = "Haitian WANG", email = "haitian.wang@student.unimelb.edu.au" },
    { name = "Aoxiang Xiao", email = "aoxiang.xiao@student.unimelb.edu.au" },
    { name = "Mingda Zheng", email = "mingda.zheng1@student.unimelb.edu.au" }
]
readme = "README.md"
license = { file = "LICENSE" }

# Runtime dependencies only
dependencies = [
    "absl-py==1.4.0",
    "astunparse==1.6.3",
    "cachetools==5.3.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "cycler==0.11.0",
    "darkdetect==0.8.0",
    "exceptiongroup==1.2.2",
    "flatbuffers==23.5.26",
    "fonttools==4.38.0",
    "gast==0.4.0",
    "google-auth==2.23.4",
    "google-auth-oauthlib==0.5.3",
    "google-pasta==0.2.0",
    "grpcio==1.59.3",
    "h5py==3.8.0",
    "idna==3.6",
    "importlib-metadata==6.7.0",
    "joblib==1.3.2",
    "keras==2.13.1",
    "Keras-Preprocessing==1.1.2",
    "kiwisolver==1.4.5",
    "libclang==16.0.6",
    "llvmlite==0.39.1",
    "Markdown==3.4.4",
    "MarkupSafe==2.1.3",
    "matplotlib==3.5.3",
    "numba==0.56.4",
    "numpy==1.22.4",
    "oauthlib==3.2.2",
    "opencv-python==4.8.1.78",
    "opt-einsum==3.3.0",
    "packaging==23.2",
    "Pillow==9.5.0",
    "protobuf==3.20.3",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "pywin32==310; platform_system == 'Windows'",
    "PyYAML==6.0.1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "six==1.16.0",
    "tensorboard==2.13.0",
    "tensorboard-data-server==0.7.1",
    "tensorboard-plugin-wit==1.8.1",
    "tensorflow==2.13.0",
    "tensorflow-estimator==2.13.0",
    "tensorflow-io-gcs-filesystem>=0.31.0,<=0.34.0",
    "termcolor==2.3.0",
    "threadpoolctl==3.1.0",
    "typing_extensions==4.5",
    "urllib3==2.0.7",
    "Werkzeug==2.2.3",
    "wrapt==1.14.0",
    "zipp==3.15.0"
]
requires-python = ">=3.8.0"

[project.scripts]
opendrop = "opendrop_ml.main:main"